--- a/Abandoned-Animal/data/repreprocessing.ipynb
+++ b/Abandoned-Animal/data/repreprocessing.ipynb
@@ -18,15 +18,15 @@
     {
      "data": {
       "text/plain": [
-       "['서울시-수의사현황-통계-2009-2018.txt',\n",
-       " '.DS_Store',\n",
-       " 'Untitled.ipynb',\n",
-       " '서울시-주민등록인구-구별-통계.txt',\n",
-       " 'preprocessing_data.ipynb',\n",
+       "['.DS_Store',\n",
        " '.ipynb_checkpoints',\n",
        " 'abandoned_animal_data_with_pop.csv',\n",
        " 'abandoned_animal_data_with_pop2.csv',\n",
-       " '서울시-유기동물보호-현황-통계-2009-2018.txt']"
+       " 'preprocessing_data.ipynb',\n",
+       " 'repreprocessing.ipynb',\n",
+       " '서울시-수의사현황-통계-2009-2018.txt',\n",
+       " '서울시-유기동물보호-현황-통계-2009-2018.txt',\n",
+       " '서울시-주민등록인구-구별-통계.txt']"
       ]
      },
      "execution_count": 2,
@@ -35,7 +35,7 @@
     }
    ],
    "source": [
-    "os.listdir()"
+    "sorted(os.listdir())"
    ]
   },
   {
@@ -1246,244 +1246,6 @@
    "source": [
     "result.to_csv('abandoned_animal_data_with_pop2.csv',index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "15564"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result[result['자치구'] == '강남구']['계'].sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>기간</th>\n",
-       "      <th>animal</th>\n",
-       "      <th>자치구</th>\n",
-       "      <th>계</th>\n",
-       "      <th>인구총계</th>\n",
-       "      <th>수의사합계</th>\n",
-       "      <th>분류</th>\n",
-       "      <th>value</th>\n",
-       "      <th>분류별 합계</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>75</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>개</td>\n",
-       "      <td>강남구</td>\n",
-       "      <td>346</td>\n",
-       "      <td>577,070</td>\n",
-       "      <td>180</td>\n",
-       "      <td>인도(주인)</td>\n",
-       "      <td>82</td>\n",
-       "      <td>84</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>76</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>고양이</td>\n",
-       "      <td>강남구</td>\n",
-       "      <td>328</td>\n",
-       "      <td>577,070</td>\n",
-       "      <td>180</td>\n",
-       "      <td>인도(주인)</td>\n",
-       "      <td>0</td>\n",
-       "      <td>84</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>77</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>기타 동물</td>\n",
-       "      <td>강남구</td>\n",
-       "      <td>29</td>\n",
-       "      <td>577,070</td>\n",
-       "      <td>180</td>\n",
-       "      <td>인도(주인)</td>\n",
-       "      <td>2</td>\n",
-       "      <td>84</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>825</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>개</td>\n",
-       "      <td>강남구</td>\n",
-       "      <td>346</td>\n",
-       "      <td>577,070</td>\n",
-       "      <td>180</td>\n",
-       "      <td>입양분양</td>\n",
-       "      <td>82</td>\n",
-       "      <td>222</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>826</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>고양이</td>\n",
-       "      <td>강남구</td>\n",
-       "      <td>328</td>\n",
-       "      <td>577,070</td>\n",
-       "      <td>180</td>\n",
-       "      <td>입양분양</td>\n",
-       "      <td>133</td>\n",
-       "      <td>222</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>827</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>기타 동물</td>\n",
-       "      <td>강남구</td>\n",
-       "      <td>29</td>\n",
-       "      <td>577,070</td>\n",
-       "      <td>180</td>\n",
-       "      <td>입양분양</td>\n",
-       "      <td>7</td>\n",
-       "      <td>222</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1575</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>개</td>\n",
-       "      <td>강남구</td>\n",
-       "      <td>346</td>\n",
-       "      <td>577,070</td>\n",
-       "      <td>180</td>\n",
-       "      <td>폐사안락사</td>\n",
-       "      <td>176</td>\n",
-       "      <td>389</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1576</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>고양이</td>\n",
-       "      <td>강남구</td>\n",
-       "      <td>328</td>\n",
-       "      <td>577,070</td>\n",
-       "      <td>180</td>\n",
-       "      <td>폐사안락사</td>\n",
-       "      <td>193</td>\n",
-       "      <td>389</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1577</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>기타 동물</td>\n",
-       "      <td>강남구</td>\n",
-       "      <td>29</td>\n",
-       "      <td>577,070</td>\n",
-       "      <td>180</td>\n",
-       "      <td>폐사안락사</td>\n",
-       "      <td>20</td>\n",
-       "      <td>389</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2325</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>개</td>\n",
-       "      <td>강남구</td>\n",
-       "      <td>346</td>\n",
-       "      <td>577,070</td>\n",
-       "      <td>180</td>\n",
-       "      <td>계류기증</td>\n",
-       "      <td>6</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2326</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>고양이</td>\n",
-       "      <td>강남구</td>\n",
-       "      <td>328</td>\n",
-       "      <td>577,070</td>\n",
-       "      <td>180</td>\n",
-       "      <td>계류기증</td>\n",
-       "      <td>2</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2327</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>기타 동물</td>\n",
-       "      <td>강남구</td>\n",
-       "      <td>29</td>\n",
-       "      <td>577,070</td>\n",
-       "      <td>180</td>\n",
-       "      <td>계류기증</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        기간 animal  자치구    계     인구총계  수의사합계      분류  value  분류별 합계\n",
-       "75    2010      개  강남구  346  577,070    180  인도(주인)     82      84\n",
-       "76    2010    고양이  강남구  328  577,070    180  인도(주인)      0      84\n",
-       "77    2010  기타 동물  강남구   29  577,070    180  인도(주인)      2      84\n",
-       "825   2010      개  강남구  346  577,070    180    입양분양     82     222\n",
-       "826   2010    고양이  강남구  328  577,070    180    입양분양    133     222\n",
-       "827   2010  기타 동물  강남구   29  577,070    180    입양분양      7     222\n",
-       "1575  2010      개  강남구  346  577,070    180   폐사안락사    176     389\n",
-       "1576  2010    고양이  강남구  328  577,070    180   폐사안락사    193     389\n",
-       "1577  2010  기타 동물  강남구   29  577,070    180   폐사안락사     20     389\n",
-       "2325  2010      개  강남구  346  577,070    180    계류기증      6       8\n",
-       "2326  2010    고양이  강남구  328  577,070    180    계류기증      2       8\n",
-       "2327  2010  기타 동물  강남구   29  577,070    180    계류기증      0       8"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "result[(result['기간'] == 2010) & (result['자치구'] == '강남구')]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
