--- a/Bestseller-Book_title_Analysis/data/crawling_result_to_csv.ipynb
+++ b/Bestseller-Book_title_Analysis/data/crawling_result_to_csv.ipynb
@@ -61,7 +61,7 @@
    },
    "outputs": [],
    "source": [
-    "pd.concat(result_df).to_csv('Book_title_1999to2020_in_aladin.csv', index = False)"
+    "pd.concat(result_df).to_csv('./Book_title_1999to2020_in_aladin.csv', index = False)"
    ]
   }
  ],
