--- a/Bestseller-Book_title_Analysis/data/preprocessing_data.ipynb
+++ b/Bestseller-Book_title_Analysis/data/preprocessing_data.ipynb
@@ -2,14 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,62 +23,196 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'PyKomoran'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-ad26a1c79593>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mPyKomoran\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mkomoran\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mKomoran\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDEFAULT_MODEL\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'FULL'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'PyKomoran'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already up-to-date: pip in /home/eunbinpark/miniconda3/envs/da/lib/python3.7/site-packages (20.2.3)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
    ],
    "source": [
+    "pip install --upgrade pip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already up-to-date: pip in /home/eunbinpark/miniconda3/envs/da/lib/python3.7/site-packages (20.2.3)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install pip --upgrade"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from PyKomoran import *\n",
     "\n",
+    "with open('user_dict.user', 'w') as dict: \n",
+    "    dict.write('해커스\\tNNP\\n일러스트\\tNNP\\n리커버\\tNNP\\n양장판\\tNNP\\n해리 포터\\tNNP}')\n",
+    "    \n",
     "komoran = Komoran(DEFAULT_MODEL['FULL'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(11950, 5)"
+       "(23200, 7)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv('Book_title_1999to2020_in_aladin.csv')\n",
-    "del df['ordered']\n",
     "df['writer'] = df['writer'].map(ast.literal_eval)\n",
     "df.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>title</th>\n",
+       "      <th>url</th>\n",
+       "      <th>writer</th>\n",
+       "      <th>yr-mn</th>\n",
+       "      <th>rank</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>해리 포터와 마법사의 돌 1 (무선)</td>\n",
+       "      <td>https://www.aladin.co.kr/shop/wproduct.aspx?It...</td>\n",
+       "      <td>[(J.K. 롤링 (지은이), 김혜원 , (옮긴이), |)]</td>\n",
+       "      <td>1-50</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>해리 포터와 비밀의 방 1 (무선)</td>\n",
+       "      <td>https://www.aladin.co.kr/shop/wproduct.aspx?It...</td>\n",
+       "      <td>[(J.K. 롤링 (지은이), 김혜원 , (옮긴이), |)]</td>\n",
+       "      <td>1-50</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   year  month                 title  \\\n",
+       "0  2000      1  해리 포터와 마법사의 돌 1 (무선)   \n",
+       "1  2000      1   해리 포터와 비밀의 방 1 (무선)   \n",
+       "\n",
+       "                                                 url  \\\n",
+       "0  https://www.aladin.co.kr/shop/wproduct.aspx?It...   \n",
+       "1  https://www.aladin.co.kr/shop/wproduct.aspx?It...   \n",
+       "\n",
+       "                              writer yr-mn  rank  \n",
+       "0  [(J.K. 롤링 (지은이), 김혜원 , (옮긴이), |)]  1-50     1  \n",
+       "1  [(J.K. 롤링 (지은이), 김혜원 , (옮긴이), |)]  1-50     2  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "141"
+       "0               [(J.K. 롤링 (지은이), 김혜원 , (옮긴이), |)]\n",
+       "1               [(J.K. 롤링 (지은이), 김혜원 , (옮긴이), |)]\n",
+       "2                           [(도올 김용옥 , (지은이), |)]\n",
+       "3    [(조애너 콜 (지은이), 브루스 디건 (그림), 이연수 , (옮긴이), |)]\n",
+       "4    [(조애너 콜 (지은이), 브루스 디건 (그림), 이연수 , (옮긴이), |)]\n",
+       "Name: writer, dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['writer'].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "258"
+      ]
+     },
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,37 +242,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                   [(J.K. 롤링 , 지은이), (, 김혜원  , 옮긴이)]\n",
+       "1                   [(J.K. 롤링 , 지은이), (, 김혜원  , 옮긴이)]\n",
+       "2                                   [(도올 김용옥  , 지은이)]\n",
+       "3    [(조애너 콜 , 지은이), (, 브루스 디건 , 그림), (, 이연수  , 옮긴이)]\n",
+       "4    [(조애너 콜 , 지은이), (, 브루스 디건 , 그림), (, 이연수  , 옮긴이)]\n",
+       "Name: split_writer, dtype: object"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['split_writer'].head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('user_dict.user', 'w') as dict: \n",
-    "    dict.write('해커스\\tNNP\\n일러스트\\tNNP\\n리커버\\tNNP\\n양장판\\tNNP')"
+    "    dict.write('해커스\\tNNP\\n일러스트\\tNNP\\n리커버\\tNNP\\n양장판\\tNNP\\n해리 포터\\tNNP}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "java.lang.RuntimeExceptionPyRaisable",
+     "evalue": "java.lang.NullPointerException",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mjava.lang.RuntimeExceptionPyRaisable\u001b[0m      Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-32-487a581409d5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mkomoran\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnouns\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"해리 포터와 마법사의 돌 1 (무선)\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/miniconda3/envs/da/lib/python3.7/site-packages/konlpy/tag/_komoran.py\u001b[0m in \u001b[0;36mnouns\u001b[0;34m(self, phrase)\u001b[0m\n\u001b[1;32m     79\u001b[0m         \u001b[0;34m\"\"\"Noun extractor.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     80\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 81\u001b[0;31m         \u001b[0mtagged\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpos\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mphrase\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     82\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0ms\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mt\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtagged\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstartswith\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'NN'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     83\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/miniconda3/envs/da/lib/python3.7/site-packages/konlpy/tag/_komoran.py\u001b[0m in \u001b[0;36mpos\u001b[0;34m(self, phrase, flatten, join)\u001b[0m\n\u001b[1;32m     64\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     65\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0msentence\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msentences\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 66\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjki\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0manalyze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msentence\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetTokenList\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     67\u001b[0m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtoken\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetMorph\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtoken\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetPos\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mtoken\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     68\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mjava.lang.RuntimeExceptionPyRaisable\u001b[0m: java.lang.NullPointerException"
+     ]
+    }
+   ],
    "source": [
-    "komoran.set_user_dic(\"user_dict.user\");"
+    "komoran.nouns(\"해리 포터와 마법사의 돌 1 (무선)\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0               해리 포터와 마법사의 돌 1 (무선)\n",
+       "1                해리 포터와 비밀의 방 1 (무선)\n",
+       "2                       노자와 21세기 - 1\n",
+       "3                         신기한 스쿨버스 1\n",
+       "4                         신기한 스쿨버스 4\n",
+       "                    ...             \n",
+       "23195    전설로 떠나는 월가의 영웅 (2017 최신개정판)\n",
+       "23196                      타인에 대한 연민\n",
+       "23197    내가 들어보지 못해서, 아이에게 해주지 못한 말들\n",
+       "23198             우리가 빛의 속도로 갈 수 없다면\n",
+       "23199                  내 인생의 첫 주식 공부\n",
+       "Name: title, Length: 23200, dtype: object"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df['nouns'] = df['title'].map(komoran.nouns)"
+    "#df['nouns'] = \n",
+    "df['title']#.apply(komoran.nouns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    [해리 포터와 마법사의 돌, 무선]\n",
+       "1     [해리 포터와 비밀의 방, 무선]\n",
+       "2             [노자, 21세기]\n",
+       "3               [스쿨, 버스]\n",
+       "4               [스쿨, 버스]\n",
+       "Name: nouns, dtype: object"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['nouns'].head()"
    ]
   },
   {
@@ -288,7 +495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
